panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_single_unnamed_void_param_is_no_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_single_unnamed_void_param_is_no_args.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_single_unnamed_void_param_is_no_args.c"
   (declaration (f~0 `fn() -> int` (static f)) ∅)
   (declaration (f~0 `fn() -> int` (static f)) ∅))

----- stderr -----
